Update util dependency

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     "thecodingmachine/safe": "^1.1",
     "cyndaron/module": "^1.0",
     "cyndaron/dbal": "^1.0",
-    "cyndaron/util": "9999999-dev"
+    "cyndaron/util": "^1.0"
   },
   "require-dev": {
     "cyndaron/cyndaron": "dev-master",
