Fix detection of includes and PHPStan errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
-	checkMissingIterableValueType: false
+    checkMissingIterableValueType: false
+    scanFiles:
+      - .phpstan.php
 includes:
     - vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon
